Merge branch 'Release-1.1.2' into verifyReferralsSC